--- a/proton.in
+++ b/proton.in
@@ -248,12 +248,14 @@ with prefix_lock:
             vr_config is None or \
             vr_log is None:
         try:
-            #TODO: support mac
-            if "XDG_CONFIG_HOME" in os.environ:
-                path = os.environ["XDG_CONFIG_HOME"]
+            if "Darwin" in os.uname()[0]:
+                path=os.environ["HOME"] + "/Library/Application Support/OpenVR/.openvr/openvrpaths.vrpath"
             else:
-                path = os.environ["HOME"] + "/.config"
-            path = path + "/openvr/openvrpaths.vrpath"
+                if "XDG_CONFIG_HOME" in os.environ:
+                    path = os.environ["XDG_CONFIG_HOME"]
+                else:
+                    path = os.environ["HOME"] + "/.config"
+                path = path + "/openvr/openvrpaths.vrpath"
 
             j = json.load(open(path, "r"))
 
